# pddl_to_rdf

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.yaml  main.py  pddl_shacl.ttl  pddl_to_rdf.py  pyproject.toml  requirements.txt  server.py  testdomain.pddl  testproblem.pddl
pddl_to_rdf/: __main__.py
public/: index.html  script.js
src/: main.rs
views/: error404.html  error500.html
