[project]
name = "pddl_to_rdf"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "tree_sitter",
    "pyoxigraph"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pddl_to_rdf"]

[tool.hatch.envs.default]
python = "3.11"
dependencies = [
  "types-tree-sitter",
]

[tool.hatch.build]
only-packages=true
